# dto/dto.user.go
@@ -1,5 +1,16 @@
 package dto
 
+const (
+	Create string = "create"
+	Login  string = "login"
+)
+
+type UserRequestPayload struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8"`
+	Action   string `json:"action" validate:"required"`
+}
+
 type RequestRegister struct {
 	Id       string `json:"id,omitempty"`
 	Username string `json:"username" validate:"required"`
