# handler/user/user_handler.go
@@ -11,7 +11,6 @@ import (
 )
 
 type UserHandler interface {
-	Register(ctx *gin.Context)
 	Login(ctx *gin.Context)
 	Update(ctx *gin.Context)
 	Delete(ctx *gin.Context)
@@ -26,60 +25,6 @@ func NewUserHandler(service service.UserService, logger logger.Logger) UserHandl
 	return &handler{service: service, logger: logger}
 }
 
-// Register new user
-// @Tags users
-// @Summary Register new user
-// @Description Register the new user
-// @Accept json
-// @Produce json
-// @Param data body dto.RequestRegister true "data"
-// @Success 201 {object} helper.Response{data=helper.Response} "CREATED"
-// @Failure 400 {object} helper.Response{errors=helper.ErrorResponse} "Bad Request"
-// @Failure 409 {object} helper.Response{errors=helper.ErrorResponse} "data conflict, like email already exist"
-// @Router /api/users/register [POST]
-func (h handler) Register(ctx *gin.Context) {
-	input := new(dto.RequestRegister)
-
-	if err := ctx.ShouldBindJSON(&input); err != nil {
-		h.logger.Warn(err.Error(), helper.FunctionCaller("Register"), input)
-		ctx.JSON(http.StatusUnprocessableEntity, helper.NewResponse(nil, err))
-		return
-	}
-
-	modelState := make(map[string]string)
-	if input.Email == "" {
-		modelState["Email"] = "do not left Email empty"
-	}
-	if input.Username == "" {
-		modelState["Username"] = "do not left Username empty"
-	}
-	if input.Password == "" {
-		modelState["Password"] = "do not left Password emtpy"
-	}
-
-	if len(modelState) != 0 {
-		ctx.JSON(http.StatusBadRequest, helper.NewResponse(modelState, nil))
-	}
-
-	response, err := h.service.RegisterUser(*input)
-
-	if err != nil {
-		ctx.JSON(
-			helper.GetErrorStatusCode(err),
-			helper.NewResponse(
-				helper.ErrorResponse{
-					Code:    helper.GetErrorStatusCode(err),
-					Message: "Either username, email, or choosen password has been selected",
-				},
-				err,
-			),
-		)
-		return
-	}
-
-	ctx.JSON(http.StatusCreated, helper.NewResponse(response, err))
-}
-
 // Login user
 // @Tags users
 // @Summary Login user
@@ -90,7 +35,7 @@ func (h handler) Register(ctx *gin.Context) {
 // @Success 200 {object} helper.Response{data=dto.ResponseLogin} "OK"
 // @Failure 400 {object} helper.Response{errors=helper.ErrorResponse} "Bad Request"
 // @Failure 404 {object} helper.Response{errors=helper.ErrorResponse} "Record not found"
-// @Router /api/users/login [POST]
+// @Router /v1/user/login [POST]
 func (h handler) Login(ctx *gin.Context) {
 	input := new(dto.RequestLogin)
 	err := ctx.ShouldBindJSON(&input)
@@ -122,7 +67,7 @@ func (h handler) Login(ctx *gin.Context) {
 // @Success 200 {object} helper.Response{data=helper.Response} "OK"
 // @Failure 400 {object} helper.Response{errors=helper.ErrorResponse} "Bad Request"
 // @Failure 401 {object} helper.Response{errors=helper.ErrorResponse} "Unauthorization"
-// @Router /api/users [PUT]
+// @Router /v1/user [PUT]
 func (h handler) Update(ctx *gin.Context) {
 	input := new(dto.RequestRegister)
 
@@ -152,7 +97,7 @@ func (h handler) Update(ctx *gin.Context) {
 // @Failure 404 {object} helper.Response{errors=helper.ErrorResponse} "Not Found"
 // @Failure 400 {object} helper.Response{errors=helper.ErrorResponse} "Bad Request"
 // @Failure 401 {object} helper.Response{errors=helper.ErrorResponse} "Unauthorization"
-// @Router /api/users [DELETE]
+// @Router /v1/user [DELETE]
 func (h handler) Delete(ctx *gin.Context) {
 	id := ctx.MustGet("user_id")
 
